# VoidworksLegacy

./: .drone.yml  .gitignore  AUTHORS.md  CMakeLists.txt  README.md
contrib/: deploy-debugclient.sh  inject.bat  inject.cea  switch-steam-account.bat
examples/debugclient/: CMakeLists.txt  README.md  debugclient.cpp
include/: CMakeLists.txt  voidworks.h
include/voidworks/: CMakeLists.txt  addresses.h  animation.h  anticheat.h  boss.h  bullet.h  bullet_tracker.h  camera.h  character.h  common.h  constants.h  debug.h  dll_wrapper.h  effect.h  equipment.h  hook.h  input.h  item.h  menu.h  options.h  packet.h  packet_handler.h  packet_struct.h  param.h  param_classes.h  player.h  position.h  process.h  protection.h  protection_handler.h  session.h  session_watcher.h  sound.h  subroutine.h  subroutine_manager.h  target.h  throw.h  window.h  world.h
include/voidworks/adapter/: CMakeLists.txt  ds3connectioninfo.h
src/: CMakeLists.txt  animation.cpp  anticheat.cpp  boss.cpp  bullet.cpp  bullet_tracker.cpp  camera.cpp  character.cpp  common.cpp  debug.cpp  dll_wrapper.cpp  effect.cpp  equipment.cpp  hook.cpp  input.cpp  item.cpp  menu.cpp  options.cpp  packet.cpp  packet_handler.cpp  param.cpp  param_classes.cpp  player.cpp  position.cpp  process.cpp  protection.cpp  protection_handler.cpp  session.cpp  session_watcher.cpp  sound.cpp  subroutine.cpp  subroutine_manager.cpp  target.cpp  throw.cpp  window.cpp  world.cpp
src/adapter/: CMakeLists.txt  ds3connectioninfo.cpp
utils/forge/: Dockerfile  README.md  build-image.sh  voidworks-forge
